test: --add-exports module/packages=ALL-UNNAMED modules